fixed overview page on ie9.

--- a/SQ/static/bootstrap/custom/_grid.scss
+++ b/SQ/static/bootstrap/custom/_grid.scss
@@ -9,12 +9,15 @@
 .container {
 	@include container-fixed;
 
+	/* Minimum width */
+	width: $container-md;
+
 	/*@media (min-width: $screen-sm-min) {
 		width: $container-sm;
 	}*/
-	@media (min-width: $screen-md-min) {
+	/*@media (min-width: $screen-md-min) {
 		width: $container-md;
-	}
+	}*/
 	@media (min-width: $screen-lg-min) {
 		width: $container-lg;
 	}
